# transcrtribe

./: .gitattributes  .gitignore  CLAUDE.md  Install Transcrtribe.bat  Install Transcrtribe.command  README.md  Transcribe Audio.bat  Transcribe Audio.command  install_macos.sh  install_windows.ps1  pyproject.toml  requirements.txt  transcribe_audio_windows.ps1
transcrtribe/: audio_prep.py  cli.py  conversation.py  diarizer.py  exporter.py  transcriber.py
